--- a/src/app/weather/weather-list/weather-list.component.html
+++ b/src/app/weather/weather-list/weather-list.component.html
@@ -1,13 +1,27 @@
+<div class="float-right">
+	<form class="form-inline"  (submit)="addCityCountry()">
+		<div class="form-group">
+			<input type="email" class="form-control" [(ngModel)]="input.city" [ngModelOptions]="{standalone: true}" placeholder="City">
+			<input type="email" class="form-control" [(ngModel)]="input.country" [ngModelOptions]="{standalone: true}" placeholder="Country">
+		</div>
+
+		<button type="submit" class="btn btn-outline-primary">Add Place</button>
+	</form>
+</div>
+
+
 <div class="table-responsive" >
 	<table class="table table-condensed table-borderless table-hover">
 		<tbody>
-			<tr *ngFor="let item of items">
+			<tr *ngFor="let item of items; let i=index">
 				<td  class="px-2">
 					<h5 class="text-primary">{{item.city}}, {{item.country}}</h5>
-					<h4 class="text-muted info-text-right float-right"> {{item.temperature}}°c</h4>
-					<h6 class="pt-2">
-					{{item.weather}}</h6><br>
+					
+					<h4 class="text-info info-text-right float-right"> {{item.temperature}}°c</h4>
+					<h6 class="pt-2">{{item.weather}}</h6><br>
 				</td>
+				<td width="20px;"><span class="float-right btn btn-sm btn-danger rounded-circle" 
+					(click)="removeCityCountry(i)">x</span></td>
 			</tr>
 		</tbody>
 	</table>
