--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
 	<div class="row">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-3 py-5">
+				<div class="col-lg-3 col-md-3 py-4">
 					<app-sidebar></app-sidebar>
 				</div>
-				<div class="col-lg-9 col-md-9 py-5">
+				<div class="col-lg-9 col-md-9 py-md-4">
 					<router-outlet></router-outlet>
 				</div>
 			</div>
