added google maps

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<div class="card py-5 px-3">
-	<weather-list></weather-list>
-</div>
+
+<weather-list></weather-list>
+<hr>
+<weather-map></weather-map>
