--- a/src/app/weather/weather-list/weather-list.component.html
+++ b/src/app/weather/weather-list/weather-list.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div id="notFoundModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" [ngClass]="notFound=='true' ? 'modal fade show fade-show': 'modal fade'">
+<div class="modal" id="notFoundModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" [ngClass]="notFound=='true' ? 'fade show fade-show': 'fade'">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -18,45 +18,48 @@
   </div>
 </div>
 
-<section id="search-weather">
-	<div class="d-none d-sm-none d-md-block">
-		<form class="form-inline float-right"  (submit)="addCityCountry()">
-			<div class="form-group">
-				<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
-			</div>
-			<button type="submit" class="btn btn-outline-primary">Add Place</button>
-		</form>
-		<br><br>
-		<small class="container-text">i.e. London, Uk | Manila, PH | New York, USA</small>
-	</div>	
+<div class="card py-5 px-3">
+	<section id="search-weather">
+		<div class="d-none d-sm-none d-md-block">
+			<form class="form-inline float-right"  (submit)="addCityCountry()">
+				<div class="form-group">
+					<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
+				</div>
+				<button type="submit" class="btn btn-outline-primary">Add Place</button>
+			</form>
+			<br><br>
+			<small class="container-text">i.e. London, Uk | Manila, PH | New York, USA</small>
+		</div>	
 
-	<div class="d-block d-sm-block d-md-none">
-		<form class="form"  (submit)="addCityCountry()">
-			<div class="form-group">
-				<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
-				<small class="container-text">i.e. London, Uk | Manila, PH | New York, USA</small>
-			</div>
-			<br>
-			<button type="submit" class="btn btn-outline-primary float-right btn-sm">Add Place</button>
-		</form><br>
-	</div>	
-</section>
+		<div class="d-block d-sm-block d-md-none">
+			<form class="form"  (submit)="addCityCountry()">
+				<div class="form-group">
+					<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
+					<small class="container-text">i.e. London, Uk | Manila, PH | New York, USA</small>
+				</div>
+				<br>
+				<button type="submit" class="btn btn-outline-primary float-right btn-sm">Add Place</button>
+			</form><br>
+		</div>	
+	</section>
 
-<section id="weather-list" class="container-fluid mt-5">
-	<div class="table-responsive">
-		<table class="table table-condensed table-borderless table-hover">
-			<tbody>
-				<tr *ngFor="let item of items; let i=index">
-					<td  class="px-2">
-						<h5 class="text-primary">{{item.city}}, {{item.country}}</h5>
-						
-						<h4 class="text-info info-text-right float-right"> {{item.temperature}}°c</h4>
-						<h6 class="pt-2">{{item.weather}}</h6><br>
-					</td>
-					<td width="20px;"><span class="float-right btn btn-sm btn-danger rounded-circle" 
-						(click)="removeCityCountry(i)">x</span></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</section>
+	<section id="weather-list" class="container-fluid mt-5">
+		<div class="table-responsive">
+			<table class="table table-condensed table-borderless table-hover">
+				<tbody>
+					<tr *ngFor="let item of items; let i=index">
+						<td  class="px-2">
+							<h5 class="text-primary">{{item.city}}, {{item.country}}</h5>
+							
+							<h4 class="text-info info-text-right float-right"> {{item.temperature}}°c</h4>
+							<h6 class="pt-2">{{item.weather}}</h6><br>
+						</td>
+						<td width="20px;"><span class="float-right btn btn-sm btn-danger rounded-circle" 
+							(click)="removeCityCountry(i)">x</span></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</section>
+</div>
+
