added sattelite view

--- a/src/app/weather/weather-map/weather-map.component.html
+++ b/src/app/weather/weather-map/weather-map.component.html
@@ -1,4 +1,4 @@
 
-<agm-map [latitude]="lat" [longitude]="lng">
+<agm-map [latitude]="lat" [longitude]="lng" [fullscreenControl]='true' [mapTypeControl]='true'>
 	<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 </agm-map>
