--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,13 @@
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 py-4">
+			<sidebar></sidebar>
+		</div>
+		<div class="col-lg-9 col-md-9 py-4">
+			<weather-list></weather-list>
+			<hr>
+			<weather-map></weather-map>
+		</div>
+	</div>
+</div>
 
-<weather-list></weather-list>
-<hr>
-<weather-map></weather-map>
