--- a/src/app/weather/weather-list/weather-list.component.html
+++ b/src/app/weather/weather-list/weather-list.component.html
@@ -47,7 +47,7 @@
 		<div class="table-responsive">
 			<table class="table table-condensed table-borderless table-hover">
 				<tbody>
-					<tr *ngFor="let item of items; let i=index">
+					<tr *ngFor="let item of items; let i=index" [@fadeIn]>
 						<td  class="px-2">
 							<h5 class="text-primary">{{item.city}}, {{item.country}}</h5>
 							
