--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<section class="container" id="main-section">
 	<div class="row">
 		<div class="col-lg-3 col-md-3 py-4">
 			<sidebar></sidebar>
@@ -9,5 +9,5 @@
 			<weather-map></weather-map>
 		</div>
 	</div>
-</div>
+</section>
 
