--- a/src/app/weather/weather-profile/weather-profile.component.html
+++ b/src/app/weather/weather-profile/weather-profile.component.html
@@ -15,7 +15,7 @@
 						</span>
 					</small>
 				</td>
-				<span class="float-right btn btn-sm btn-danger"><small>x</small></span>
+				<span class="float-right btn btn-sm btn-danger" (click)="onDelete(item)"><small>x</small></span>
 			</tr>
 		</tbody>
 	</table>
