modified favicon, map api, and weather classes

--- a/src/app/weather/weather-map/weather-map.component.html
+++ b/src/app/weather/weather-map/weather-map.component.html
@@ -1,5 +1,4 @@
 
-<agm-map [latitude]="lat" [longitude]="lng" 
-	[fullscreenControl]='true' [mapTypeControl]='true' [zoom]="12">
-		<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map [latitude]="lat" [longitude]="lng" [fullscreenControl]='true' [mapTypeControl]='true' [zoom]="12">
+		<agm-marker [latitude]="lat" [longitude]="lng" [markerDraggable]="true"></agm-marker>
 </agm-map>
