Add timezone components and refactor code for weather

--- a/src/app/home/sidebar/sidebar.component.html
+++ b/src/app/home/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<!-- ACTIVITY FEEDS -->
+<!-- WEATHER PROFILES -->
 <div class="card">
 	<button class="btn btn-activity bg-gradient text-white text-capitalize text-center py-4" type="button" data-toggle="collapse" data-target="#weatherCollapse" aria-expanded="true" aria-controls="weatherCollapse">Weather Profiles <span class="fa fa-caret-down float-right"></span>
 	</button>
@@ -6,7 +6,7 @@
 	<weather-profile></weather-profile>
 </div>
 
-<!-- ACTIVITY FEEDS -->
+<!-- ACTIVITY FEEDS 
 <div class="card">
 	<button class="btn btn-activity bg-gradient text-white text-capitalize text-center py-4" type="button" data-toggle="collapse" data-target="#timezoneCollapse" aria-expanded="false" aria-controls="timezoneCollapse">Timezone Profiles <span class="fa fa-caret-down float-right"></span>
 	</button>
@@ -73,3 +73,4 @@
 		</table>
 	</div>
 </div>
+-->
