--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -15,7 +15,13 @@
 
 
 				<li class="nav-item">
-					<a class="nav-link  pt-3" routerLink="/"> Dashboard 
+					<a class="nav-link  pt-3" routerLink="/weather"> Weather 
+
+					</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link  pt-3" routerLink="/timezone"> Timezone 
 
 					</a>
 				</li>
