--- a/src/app/timezone/home/home.component.html
+++ b/src/app/timezone/home/home.component.html
@@ -1,10 +1,10 @@
-<section class="container" id="main-section">
+<section class="container" id="timezone-section">
 	<div class="row">
 		<div class="col-lg-3 col-md-3 py-4">
-			<weather-sidebar></weather-sidebar>
+			<timezone-sidebar></timezone-sidebar>
 		</div>
 		<div class="col-lg-9 col-md-9 py-4">
-			<weather-list></weather-list>
+			<timezone-list></timezone-list>
 			<hr>
 			<weather-map></weather-map>
 		</div>
