--- a/src/app/timezone/timezone-list/timezone-list.component.html
+++ b/src/app/timezone/timezone-list/timezone-list.component.html
@@ -55,7 +55,7 @@
 <div class="card py-5 px-3">
 	<section id="search-weather">
 		<div class="d-none d-sm-none d-md-block">
-			<h4 class="float-left text-muted">Weather Data</h4>
+			<h4 class="float-left text-muted">Timezone Data</h4>
 			<form class="form-inline float-right"  (submit)="addCityCountry()">
 				<div class="form-group">
 					<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
