--- a/src/app/timezone/timezone-list/timezone-list.component.html
+++ b/src/app/timezone/timezone-list/timezone-list.component.html
@@ -67,7 +67,7 @@
 		</div>	
 
 		<div class="d-block d-sm-block d-md-none">
-			<form class="form"  (submit)="addCityCountry()">
+			<form class="form">
 				<div class="form-group">
 					<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
 					<small class="container-text">i.e. London, Uk | Manila, PH | New York, USA</small>
