--- a/src/app/timezone/timezone-list/timezone-list.component.html
+++ b/src/app/timezone/timezone-list/timezone-list.component.html
@@ -56,7 +56,7 @@
 	<section id="search-weather">
 		<div class="d-none d-sm-none d-md-block">
 			<h4 class="float-left text-muted">Timezone Data</h4>
-			<form class="form-inline float-right"  (submit)="addCityCountry()">
+			<form class="form-inline float-right">
 				<div class="form-group">
 					<input type="email" class="form-control" [(ngModel)]="input.search" [ngModelOptions]="{standalone: true}" placeholder="City, Country">
 				</div>
