added timezone profiles

--- a/src/app/timezone/home/sidebar/sidebar.component.html
+++ b/src/app/timezone/home/sidebar/sidebar.component.html
@@ -3,6 +3,8 @@
 	<button class="btn btn-activity bg-gradient text-white text-capitalize text-center py-4" type="button" data-toggle="collapse" data-target="#timezoneCollapse" aria-expanded="true" aria-controls="timezoneCollapse">Timezone Profiles <span class="fa fa-caret-down float-right"></span>
 	</button>
 
+	<timezone-profile></timezone-profile>
+	<!--
 	<div class="table-responsive" class="collapse show" id="timezoneCollapse">
 		<table class="table table-condensed table-borderless table-hover">
 			<tbody>
@@ -19,5 +21,5 @@
 				</tr>
 			</tbody>
 		</table>
-	</div>
+	</div>-->
 </div>
