modified styles and added about section and header navigation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,12 @@
-<section class="container" id="main-section">
+<a href="#weather-section" class="btn btn-primary text-white btn-activity btn-header bg-gradient d-none d-sm-none d-md-block">
+	<span class="fa fa-chevron-circle-right btn-header-arrow"></span>
+</a>
+
+<a href="#weather-section" class="btn btn-primary text-white btn-activity-sm btn-header-sm bg-gradient d-block d-sm-block d-md-none">
+	<span class="fa fa-chevron-circle-down btn-header-arrow-sm"></span>
+</a>
+
+<section class="container" id="weather-section">
 	<div class="row">
 		<div class="col-lg-3 col-md-3 py-4">
 			<weather-sidebar></weather-sidebar>
