--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -14,25 +14,25 @@
 			<ul class="navbar-nav mr-auto">
 
 
-				<li class="nav-item">
+				<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 					<a class="nav-link  pt-3" routerLink="/weather"> Weather 
 
 					</a>
 				</li>
 
-				<li class="nav-item">
+				<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 					<a class="nav-link  pt-3" routerLink="/timezone"> Timezone 
 
 					</a>
 				</li>
 
-				<li class="nav-item">
-					<a class="nav-link  pt-3" routerLink="/"> About 
+				<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+					<a class="nav-link  pt-3" routerLink="/about"> About 
 
 					</a>
 				</li>
 
-				<li class="nav-item">
+				<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 					<a class="nav-link  pt-3" href="#"> FAQ 
 
 					</a>
@@ -60,13 +60,6 @@
 				<h5>Check Weather and Timezone</h5>
 				<h1 class="text-white container-text d-none d-sm-none d-md-block"><strong class="header-home">Welcome to Weatzene</strong></h1>
 				<h1 class="text-white container-text d-block d-sm-block d-md-none">Welcome to Weatzene</h1>
-				<a href="#main-section" class="btn btn-primary text-white btn-activity btn-header bg-gradient d-none d-sm-none d-md-block">
-					<span class="fa fa-chevron-circle-right btn-header-arrow"></span>
-				</a>
-
-				<a href="#main-section" class="btn btn-primary text-white btn-activity-sm btn-header-sm bg-gradient d-block d-sm-block d-md-none">
-					<span class="fa fa-chevron-circle-right btn-header-arrow-sm"></span>
-				</a>
 			</div>
 		</div>
 	</div>
