--- a/src/app/timezone/home/home.component.html
+++ b/src/app/timezone/home/home.component.html
@@ -1,3 +1,11 @@
+<a href="#timezone-section" class="btn btn-primary text-white btn-activity btn-header bg-gradient d-none d-sm-none d-md-block">
+	<span class="fa fa-chevron-circle-right btn-header-arrow"></span>
+</a>
+
+<a href="#timezone-section" class="btn btn-primary text-white btn-activity-sm btn-header-sm bg-gradient d-block d-sm-block d-md-none">
+	<span class="fa fa-chevron-circle-down btn-header-arrow-sm"></span>
+</a>
+
 <section class="container" id="timezone-section">
 	<div class="row">
 		<div class="col-lg-3 col-md-3 py-4">
